# mmm-workshop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: Bayesian Model.ipynb  Explanatory Analysis.ipynb  Intro to PyMC.ipynb
